switched to using overflow-y hidden instead of disable scrolling. over the years, browser updates have broken how the explore page worked part of this could have been fixed by setting passive event listeners but this seems to be the safest way to fix a few issues it was originally done using disable scrolling becuase it was more performant

--- a/assets/css/galileo.styl
+++ b/assets/css/galileo.styl
@@ -42,7 +42,7 @@ $galileo_bgcolor = rgba($FILL_DARKER_BLUE, 0.7);
 	
 	background-color $galileo_bgcolor
 	
-	overflow-y hidden
+	overflow hidden
 
 .galileo .story-text
 	@extend .amazing .story-text
